# NUFEB-2

./: .cproject  .gitignore  .gitignore.BACKUP.3737.gitignore  .gitignore.swp  .gitmodules  .project  .readthedocs.yml  Ben test.txt  CMakeLists.txt  README  README.md  git-reminders.txt  install.sh  uninstall.sh
.metadata/: version.ini
LargeScaleModelling/: readme.txt
NUFEB-Cocktail/: book.md
code/: README.md  fix_diaadapt.cpp  fix_diaadapt.h
doc/: Manual.pdf.REMOVED.git-id
docker/: dockerfile-nufeb
example-rod/: data.cubes
examples/: .gitignore
examples-nufeb/: .gitignore
gui/: Makefile
lammps_stable_29Oct2020/: README
lib/: .gitignore
potentials/: C_10_10.mesocnt.REMOVED.git-id  TABTP_10_10.mesont.REMOVED.git-id  phi10x10.dat.REMOVED.git-id  uSemi10x10.dat.REMOVED.git-id
src/: .gitignore  Depend.sh  Make.sh  Makefile  Makefile.list  Purge.list  accelerator_kokkos.h  atom.cpp  atom.h  atom_masks.h  atom_vec_bacillus.cpp  atom_vec_cocci.cpp  atom_vec_cocci.h  atom_vec_coccus.cpp  comm_brick.cpp  comm_grid.cpp  comm_grid.h  compute_avgcon.h  compute_ke.h  compute_pressure.cpp  compute_pressure.h  compute_property_atom.cpp  compute_property_atom.h  delete_atoms.cpp  dump_hdf5.cpp  dump_image.cpp  dump_image.h  fix.h  fix_adhesion.cpp  fix_divide_bacillus.cpp  fix_divide_bacillus_minicell.cpp  fix_divide_bacillus_minicell.h  fix_divide_coccus.cpp  fix_divide_coccus.h  fix_monod_cyano.cpp  fix_monod_cyano.h  fix_monod_ecoli_wild.cpp  fix_monod_ecoli_wild.h  fix_nve_bacillus.h  fix_nve_bacillus_limit.cpp  (+31 more)
test/: lmp_mpi.REMOVED.git-id
(+37291 files in other folders)
